# orr-cli

./: .gitignore  Makefile  README.md  docs.py  mkdocs.yml  pyproject.toml  settings.toml
.github/workflows/: bump.yml
docs/: index.en.md  index.pt-BR.md  options.md
docs/orr_cli/: vector_and_db_columns.en.md  vector_and_db_columns.pt-BR.md
docs/tutorial/: recomendações.md
orr_cli/: .gitignore  __init__.py  cli.py  config.py  db.py  functions.py  i18n.py  logger.py  model.py  test.py
orr_cli/command/: files.py  install.py  institutions.py
orr_cli/data/: hidro_regions.gpkg  regions.gpkg
orr_cli/hook/pos-install/: index.pt-BR.md
orr_cli/hook/pre-install/: users_and_authorizations.en.MD
orr_cli/locale/: en_US.json  pt_BR.json
orr_cli/scripts/: 001_init.sql  002_enum.sql  003_logges.sql
orr_cli/scripts/003_functions/: 001_get_region.sql  002_get_hidro.sql  003_ob_date_format.sql  004_ob_get_intersection.sql  005_verificar_codigo_interesse_interno.sql  006_ob_verificar_codigo_interesse.sql  007_ob_insert_status.sql  008_ob_add_feature.sql  009_ob_add_feature_ma.sql  010_ob_get_intersec_notifica.sql  011_ob_is_circle.sql  012_ob_is_triangle.sql  013_ob_get_features_all_by_schema.sql  014_ob_get_features_by_schema.sql  015_calculate_area_colides_all_schemas.sql  016_permissio.sql  017_refresh_materialized_views.sql  (+4 more)
orr_cli/utils/: auth.py  callbak.py  date.py  exceptions.py  geometrValid.py  insert.py  options.py  text.py  validators.py
tests/: data.py  test_base.py  test_formatdate.py  test_get_hidro.py  test_get_region.py  test_ob_get_interesection.py
(+83 files in other folders)
